intTests/test_type_errors/unify008.log.good
Loading file "unify008.saw"
Type errors:
  unify008.saw:15:6-15:12: Error: Type mismatch.
    Expected: String
    Found:    Int

  unify008.saw:15:16-15:21: Note: The type String arises from the type of this term
  unify008.saw:15:9-15:12: Note: The type Int arises from this type annotation


FAILED
