intTests/test_type_errors/unify008.saw
//
// Exercise failure of the unify call in checkPattern. This is for
// checking a pattern against the thing it binds.
//
// There are two ways to get to this; for the sake of completeness
// this case goes via inferDecl (a single let) and there's another one
// that goes via inferRecDecls (a collection of mutually recursive
// lets).
//
// There's also two forms of let (pure and monadic) but for the moment
// at least the typechecker behavior is shared such that there's
// nothing to be gained by testing both.
//

let (x: Int) = "abc";

